@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2007,2009,2011-2012 - TortoiseSVN
+// Copyright (C) 2003-2007, 2009, 2011-2013 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -44,6 +44,7 @@ public:
 
     static std::string StdGetUTF8(const std::wstring& wide);
     static std::wstring StdGetUnicode(const std::string& utf8);
+    static std::string StdAnsiToUTF8(const std::string& ansi);
 };
 
 // resource handling utility
