@@ -16,6 +16,8 @@ Version 1.7.12
        the repo browser. (Stefan)
 - BUG: Issue #463: Selection is wrong after sorting
        the file column in the log dialog. (Stefan)
+- BUG: Issue #464: TortoiseBlame does not detect
+       utf8/ansi encodings correctly. (Stefan)
 
 Version 1.7.11
 - BUG: Issue #428: out-of-date error when modifying
